// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-gsTCUz cyuCsN"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-theme"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Theme
              </div>
              <div>
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 chOylR mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButton-x7juhx-1 cPHHXv current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-gsTCUz cyuCsN"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-theme"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Theme
              </div>
              <div>
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 cjrdBv"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary-600"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                ARK.io
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="flex overflow-hidden justify-center w-4"
                >
                  <div
                    class="sc-gsTCUz cXMmJt p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="Pagination__Wrapper-x7juhx-0 chOylR mt-5"
        data-testid="Pagination"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 lmPdYN"
          data-testid="Pagination__previous"
          type="button"
        >
          <div
            class="sc-gsTCUz jsttWF mr-2"
            height="10"
            width="10"
          >
            <svg>
              back.svg
            </svg>
          </div>
          Previous
        </button>
        <div
          class="flex px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
        >
          <div
            class="Pagination__PaginationButton-x7juhx-1 cPHHXv"
          >
            1
          </div>
          <div
            class="Pagination__PaginationButton-x7juhx-1 cPHHXv current-page"
          >
            2
          </div>
          <div
            class="Pagination__PaginationButton-x7juhx-1 cPHHXv"
          >
            3
          </div>
        </div>
        <button
          class="Button__StyledButton-mdtvtf-0 lmPdYN"
          data-testid="Pagination__next"
          type="button"
        >
          Next
          <div
            class="sc-gsTCUz cmyhNZ ml-2"
            height="12"
            width="12"
          >
            <svg>
              forward.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
